<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ContactActivity">

    <LinearLayout
        android:id="@+id/lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/main_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/money"/>

        <TextView
            android:id="@+id/main_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support_project_text"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/lin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/data_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_tv"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_tv"
                android:textSize="20sp"
                android:layout_marginStart="18dp" />

            <ImageView
                android:id="@+id/share_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_share"
                android:tint="#F1BC34"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/line"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/name_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contacts_text"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            />

        <LinearLayout
            android:id="@+id/lin_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_tm"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/tm_image"
                android:layout_marginStart="20dp"
                />

            <TextView
                android:id="@+id/channel_tm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_tm"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>