<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:layout_margin="15dp"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            >


            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/setting" />

            <TextView

                android:id="@+id/main_tv"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                android:layout_marginStart="10dp"

                android:layout_marginTop="7dp"

                android:text="@string/main_tv_text"

                android:textColor="#000000"

                android:textSize="20sp" />

            <LinearLayout

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_marginTop="0dp"

                android:orientation="horizontal">



                <TextView

                    android:id="@+id/data_tv"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_marginStart="10dp"

                    android:layout_marginTop="15dp"

                    android:layout_marginBottom="10dp"

                    android:text="@string/data_tv"

                    android:textColor="#AF9797"

                    android:textSize="18sp" />



                <TextView

                    android:id="@+id/time_tv"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"

                    android:layout_marginTop="15dp"

                    android:layout_marginBottom="10dp"

                    android:text="@string/time_tv"

                    android:textColor="#AF9797"

                    android:textSize="18sp" />



                <ImageView

                    android:id="@+id/share_btn"

                    android:layout_width="40dp"

                    android:layout_height="40dp"

                    android:layout_marginStart="58dp"

                    android:layout_marginTop="15dp"

                    android:src="@drawable/ic_share" />



            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>